src/assets/nurtur-design.scss
/* ... */
h2 {
  font-size: var(--font-size-2xl);
  font-family: var(--font-family-headline);
  font-weight: var(--font-weight-headline);
  line-height: var(--line-height-headline);
  letter-spacing: var(--letter-spacing-headline);
  margin: 0;
}
h3 {
  font-size: var(--font-size-xl);
  font-family: var(--font-family-headline);
  font-weight: var(--font-weight-headline);
  line-height: var(--line-height-headline);
  letter-spacing: var(--letter-spacing-headline);
  margin: 0;
}
h4 {
  font-size: var(--font-size-m);
  font-family: var(--font-family-body);
  font-weight: var(--font-weight-headline);
  line-height: var(--line-height-body);
  letter-spacing: var(--letter-spacing-body);
  margin: 0;
  display: inline-flex;
  align-items: center;
  gap: var(--space-2xs);
}
.hero-headline {
  font-size: var(--font-size-4xl) !important;
  font-family: var(--font-family-headline) !important;
  font-weight: var(--font-weight-headline) !important;
  line-height: var(--line-height-headline) !important;
  letter-spacing: var(--letter-spacing-headline) !important;
}
.page-headline {
  font-size: var(--font-size-3xl) !important;
  font-family: var(--font-family-headline) !important;
  font-weight: var(--font-weight-headline) !important;
  line-height: var(--line-height-headline) !important;
  letter-spacing: var(--letter-spacing-headline) !important;
}
.region-headline {
  font-size: var(--font-size-2xl) !important;
  font-family: var(--font-family-headline) !important;
  font-weight: var(--font-weight-headline) !important;
  line-height: var(--line-height-headline) !important;
  letter-spacing: var(--letter-spacing-headline) !important;
}
.section-headline {
  font-size: var(--font-size-xl) !important;
  font-family: var(--font-family-headline) !important;
  font-weight: var(--font-weight-headline) !important;
  line-height: var(--line-height-headline) !important;
  letter-spacing: var(--letter-spacing-headline) !important;
}
.item-headline {
  font-size: var(--font-size-m) !important;
  font-family: var(--font-family-body) !important;
  font-weight: var(--font-weight-headline) !important;
  line-height: var(--line-height-body) !important;
  letter-spacing: var(--letter-spacing-body) !important;
  display: inline-flex !important;
  align-items: center !important;
  gap: var(--space-2xs) !important;
}
.overline {
  font-family: var(--font-family-body);
  font-size: var(--font-size-s);
  color: var(--color-primary);
  text-transform: uppercase;
  letter-spacing: var(--letter-spacing-overline);
  font-weight: var(--font-weight-headline);
  min-inline-size: unset;
}
p {
  font-size: var(--font-size-body);
  line-height: var(--line-height-body);
  font-family: var(--font-family-body);
  font-weight: var(--font-weight-body);
  color: var(--color-on-background);
  max-inline-size: 60ch;
  min-inline-size: 10ch;
  margin: 0;
}
p.measure-s {
  max-inline-size: 40ch;
}
.lead {
  font-size: var(--font-size-l);
  max-inline-size: 50ch;
  min-inline-size: 5ch;
  color: var(--color-on-background);
}
.caption,
.caption > *,
small,
small > * {
  font-size: var(--font-size-s);
  text-align: center;
  line-height: var(--line-height-body);
  font-family: var(--font-family-body);
  font-weight: var(--font-weight-body);
  color: var(--color-on-background);
}
label {
  font-size: var(--font-size-s);
  font-weight: 400;
  font-family: var(--font-family-body);
  line-height: var(--light-height-body);
  color: var(--color-label-override, var(--color-on-background));
  inline-size: 100%;
}
label.required:after {
  content: '*';
  font-size: var(--font-size-body);
  color: var(--color-label-accent-override, var(--color-secondary));
}
del,
ins,
code,
pre {
  color: var(--color-on-background-dark);
}
del {
  text-decoration: line-through;
}
ins {
  text-decoration: underline;
}
time {
  font-family: var(--font-family-body);
  font-size: var(--font-size-s);
}
math {
  display: block;
  font-size: var(--font-size-body);
  line-height: var(--line-height-body);
  margin: var(--space-m) 0;
}
code {
  font-family:
    Courier New,
    Courier,
    monospace;
  font-size: var(--font-size-s);
}
pre {
  font-family: monospace;
  font-size: var(--font-size-s);
  line-height: var(--line-height-body);
  color: var(--color-background-dark);
  background-color: var(--color-on-background-dark);
  border-radius: 6px;
  padding: 1.5rem;
  overflow-x: auto;
}
pre * {
  color: var(--color-on-background-dark);
}
pre code {
  display: block;
  color: var(--color-background-dark);
}
pre code span {
  display: inline-block;
  padding: 0 0.25rem;
  color: var(--color-on-background-dark);
}
pre span {
  color: var(--color-on-background-dark);
}
pre code span.token {
  color: #e06c75;
}
pre code span.keyword {
  color: #c678dd;
}
pre code span.function {
  color: #d19a66;
}
pre code span.comment {
  color: #5c6370;
}
pre code span.string {
  color: #98c379;
}
pre code span.operator {
  color: #56b6c2;
}
pre code span.punctuation {
  color: #abb2bf;
}
ol,
ul {
  list-style: none;
  margin: 0;
  padding: 0;
  font-family: var(--font-family-body);
}
li {
  max-inline-size: 66ch;
  font-size: var(--font-size-body);
}
hr {
  border: none;
  border-top: 1px solid var(--color-outline-variant);
  margin: var(--space-l) 0;
  inline-size: 100%;
}
details + hr {
  margin-block: var(--space-s);
}
a {
  text-decoration: none;
  color: inherit;
}
figcaption {
  font-size: var(--font-size-s);
  line-height: var(--line-height-body);
  margin: 0;
  text-align: center;
  font-family: var(--font-family-body);
}
figure {
  display: grid;
  place-items: center;
  gap: var(--space-3xs);
}
audio,
img,
video,
picture {
  display: block;
  max-width: 100%;
  height: auto;
}
picture {
  border-radius: var(--radius-m);
}
img {
  border-radius: var(--radius-m);
  max-inline-size: 100%;
  block-size: auto;
  box-shadow: var(--elevation-3);
}
video {
  inline-size: 100%;
  block-size: auto;
}
*,
:before,
:after {
  box-sizing: border-box;
}
/* ... */

